# riot-tee

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
design/: object-diagram.puml
ld/: common.ld
ns_api/: CMakeLists.txt  keystore.h  ns_entry.h
ns_api/crypto/: crypto.h  secure_io.h  tee_crypto.h  tee_hashes.h  tee_status.h
ns_api/include/: secure_leds.h  tee_secure_io.h  tee_status.h
ns_api/include/crypto/: tee_crypto.h  tee_ecc.h  tee_hashes.h  tee_status.h
ns_api/include/rot/: rot_services.h
ns_api/src/: tee_ecc.c  tee_hashes.c  tee_key_storage.c
src/: main.c  non_secure_entry.c  ns_entry.c  operation_table.h
src/crypto/: CMakeLists.txt  crypto.c  crypto.h  hashes.c  hashes.h  secure_secure_leds.c  secure_secure_leds.h  tee_crypto.c  tee_crypto.h  tee_hashes.c  tee_hashes.h
src/random/: CMakeLists.txt  random.c  random.h
src/rot/: CMakeLists.txt  rot.c  rot.h  rot_puf_sram.c
